Fixed project detail's dark mode CSS.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -112,6 +112,14 @@
     margin-top: 3px;
 }
 
+.pill-bottom {
+    margin-bottom: 10px;
+}
+
+.pill-more-bottom {
+    margin-bottom: 20px;
+}
+
 /* links to threads */
 
 .link-primary {
